--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
 
 <body style="text-align:center;">
 
-<img width="200" src="https://freepngimg.com/thumb/paper_sheet/52252-2-envelope-images-png-file-hd.png">
-<h1>Project Name </h1>
+    <img width="200" src="https://freepngimg.com/thumb/paper_sheet/52252-2-envelope-images-png-file-hd.png">
+    <h1>Project Name </h1>
 
-<div>
-
-    <a href="http://127.0.0.1:5500/login.html"><button>Login</button></a>
-</div>
-<br />
-<div>
-    <a href="http://127.0.0.1:5500/signup.html"><button>Register</button></a>
-</div>
-<br />
-<div>
-    <a href="http://127.0.0.1:5500/forgotpassword.html"><button>Forgot password?</button></a>
     <div>
 
-        <p>Copyright 2024 - All rights reserved by ...</p>
-
+        <a href="http://127.0.0.1:5500/login.html">
+            <button>Login</button></a>
     </div>
-    </body>
+    <br />
+    <div>
+        <a href="http://127.0.0.1:5500/signup.html">
+            <button>Register</button></a>
+    </div>
+    <br />
+    <div>
+        <a href="http://127.0.0.1:5500/forgotpassword.html">
+            <button>Forgot password?</button></a>
+        <div>
+
+            <p>Copyright 2024 - All rights reserved by ...</p>
+
+        </div>
+</body>
 
 </html>
