--- a/login.html
+++ b/login.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <title>Page Title</title>
 </head>
 
 <body>
 
-</div> 
-<a href="http://127.0.0.1:5500/index.html"><button>Back</button></a>
-<div style="text-align: center;">
-<div>
-    <h1> Login </p>
-</div>
+    </div>
+    <a href="http://127.0.0.1:5500/index.html"><button>Back</button></a>
+    <div style="text-align: center;">
+        <div>
+            <h1> Login </h1>
+        </div>
 
-<div>
+        <div>
 
-    <p> E-mail:<input type="text"> </p>
-    
-</div>  
+            <p> E-mail:<input type="text"> </p>
 
-<div>
-    <p> password:<input type="password"> </p>
-    
-</div>
+        </div>
+
+        <div>
+            <p> password:<input type="password"> </p>
+
+        </div>
 
 
-    <a href="http://127.0.0.1:5500/login.html"><button>login</button></a>  <a href="http://127.0.0.1:5500/forgotpassword.html"><button>Forgot password?</button></a>
-</div>
+        <a href="http://127.0.0.1:5500/login.html"><button>login</button></a> <a
+            href="http://127.0.0.1:5500/forgotpassword.html"><button>Forgot password?</button></a>
+    </div>
 
-        <p>Copyright 2024 - All rights reserved by ...</p>
+    <p>Copyright 2024 - All rights reserved by ...</p>
 
-</div>
+    </div>
 </body>
+
 </html>
